fixes #7820 reviewed by jplouis removed gap in chrome, added a total and displaying to live grids
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@39525 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/xtheme-zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/xtheme-zenoss.css
@@ -756,6 +756,12 @@ td.x-grid3-hd-over .x-grid3-hd-inner,td.sort-desc .x-grid3-hd-inner,td.sort-asc 
     background-color:#d4e0ee;
 }
 
+#navGrid .x-panel-footer,
+#master_panel .x-panel-footer{
+    background-color:white;
+}
+
+
 .x-tree-node .hierarchy-root a span {
     color: #6386ae;
     font-size: 10px;
